[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/WidgetOptions.gd" type="Script" id=1]
[ext_resource path="res://assets/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/shader/flat_color.material" type="Material" id=3]

[sub_resource type="DynamicFontData" id=1]
hinting = 1
font_path = "res://assets/font/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 3
font_data = SubResource( 1 )

[node name="WidgetOptions" type="PopupMenu"]
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
items = [ "Resize", null, 0, false, false, 0, 0, null, "", false, "Edit", null, 0, false, false, 1, 0, null, "", false, "Delete", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 1 )

[node name="BackgroundPanel" type="Panel" parent="."]
visible = false
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonResize" type="Button" parent="VBoxContainer"]
margin_right = 422.0
margin_bottom = 765.0
rect_min_size = Vector2( 0, 8 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resize"
clip_text = true

[node name="ButtonEdit" type="Button" parent="VBoxContainer"]
margin_top = 769.0
margin_right = 422.0
margin_bottom = 1534.0
rect_min_size = Vector2( 0, 8 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Edit"
clip_text = true

[node name="ButtonDelete" type="Button" parent="VBoxContainer"]
margin_top = 1538.0
margin_right = 422.0
margin_bottom = 2304.0
rect_min_size = Vector2( 0, 8 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Delete"
clip_text = true

[node name="ArrowPanel" type="Panel" parent="."]
visible = false
material = ExtResource( 3 )
margin_left = 8.0
margin_top = 8.0
margin_right = 430.0
margin_bottom = 2312.0
rect_rotation = -44.9999
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="id_pressed" from="." to="." method="_on_WidgetOptions_id_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonResize" to="." method="_on_ButtonResize_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonEdit" to="." method="_on_ButtonEdit_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
